Thu Jul 24 17:24:59 2003  George Lebl <jirka@5z.com>

	* src/calc.c: I hate it when I apply half of a patch.  in any
	  case yet again from the FreeBSD ports: the glob usage was wrong

Thu Jul 24 17:22:52 2003  George Lebl <jirka@5z.com>

	* src/calc.c: when wordexp is missing and we use glob but
	  we weren't including glob.h  (from the FreeBSD ports)

Thu Jun 12 14:17:01 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: load programs from command line

Thu Jun 12 14:09:34 2003  George Lebl <jirka@5z.com>

	* configure.in, src/Makefile.am, genius.lang, src/gnome-genius.c: add
	  optional GtkSourceView support and add highlighting with that.
	  I should figure out the mime type mess and install all this stuff
	  so that even gedit can get highlighting for gel files.

Wed Jun 11 11:27:18 2003  George Lebl <jirka@5z.com>

	* src/genius-readline-helper.c, src/inter.c: change directory in the
	  readline helper, and update the helper completion routine to match
	  inter.c

Fri Jun 06 16:25:15 2003  George Lebl <jirka@5z.com>

	* src/gnome-genius.c: the preference dialog has hig ordered buttons
	  and all the other dialogs also now lack the separator thingie.

Mon Jun 02 13:32:12 2003  George Lebl <jirka@5z.com>

	* Release 0.5.5 

	* src/gnome-genius.c: when we go to the last error there was an
	  "off by one" error

Mon Jun 02 13:18:53 2003  George Lebl <jirka@5z.com>

	* src/geniustests.txt: add test for sqrt with mod

	* src/gnome-genius.c: print line number in the statusbar, and on
	  error place the cursor at the point of the last error (kind of
	  a hack, should somehow mark all errors)

Mon Jun 02 10:13:13 2003  George Lebl <jirka@5z.com>

	* src/eval.c: fix resetting the modulo after recursive eval call
	  (was a crash)

	* src/funclib.c, src/calc.[ch]: a lot of messages are now unified
	  for ease of translation and argument checking is done with
	  helper routines.  Also when the sqrt is called with mod try calling
	  the SqrtModPrime or erroring out.
