@@ -11,3 +11,5 @@
 #undef HAVE_MPFR
 #undef GETTEXT_PACKAGE
 #undef HAVE_GTKSOURCEVIEW
+#undef USE_NCURSES
+#undef INC_NCURSES
