@@ -1,3 +1,10 @@
+Mon Jul 28 10:35:26 2003  George Lebl <jirka@5z.com>
+
+	* configure.in, acconfig.h: check for ncurses as well if libtermcap
+	  isn't found
+
+	* src/genius.c: use GETTEXT_PACKAGE and not PACKAGE
+
 Thu Jul 24 17:24:59 2003  George Lebl <jirka@5z.com>
 
 	* src/calc.c: I hate it when I apply half of a patch.  in any
